--- a/packages/slate-react/package.json
+++ b/packages/slate-react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "meow-slate-react",
   "description": "Tools for building completely customizable richtext editors with React.",
-  "version": "0.59.0",
+  "version": "0.59.1",
   "license": "MIT",
   "repository": "git://github.com/ianstormtaylor/slate.git",
   "main": "dist/index.js",
@@ -23,13 +23,13 @@
     "scroll-into-view-if-needed": "^2.2.20"
   },
   "devDependencies": {
-    "meow-slate": "^0.59.0",
-    "meow-slate-hyperscript": "^0.59.0"
+    "meow-slate": "^0.59.1",
+    "meow-slate-hyperscript": "^0.59.1"
   },
   "peerDependencies": {
+    "meow-slate": ">=0.55.0",
     "react": ">=16.8.0",
-    "react-dom": ">=16.8.0",
-    "meow-slate": ">=0.55.0"
+    "react-dom": ">=16.8.0"
   },
   "umdGlobals": {
     "react": "React",
