--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint:eslint": "eslint \"./{packages,site}/**/*.{js,jsx,ts,tsx}\"",
     "lint:prettier": "prettier --list-different \"**/*.{css,md,js,jsx,json,ts,tsx}\"",
     "open": "open http://localhost:3000",
-    "release": "cross-env NODE_ENV=production yarn build:rollup && lerna publish",
+    "release": "lerna publish",
     "serve": "cd ./site && next",
     "start": "npm-run-all --parallel --print-label watch serve",
     "test": "mocha --require ./config/babel/register.cjs ./packages/*/test/index.js",
