--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "start": "npm-run-all --parallel --print-label watch serve",
     "test": "mocha --require ./config/babel/register.cjs ./packages/*/test/index.js",
     "test:inspect": "yarn test --inspect-brk",
-    "watch": "yarn build:rollup --watch"
+    "watch": "yarn build:rollup --watch",
+    "versionup": "lerna version --no-git-tag-version"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.4",
